# omwei-atom

./: Cargo.toml  LICENSE  README.md  TRUST_HIERARCHY.md  publish.sh
crates/cyber-monitor/: Cargo.toml  README.md
crates/cyber-monitor/src/: lib.rs
crates/omwei-atom/: .gitignore  Cargo.toml  README.md  SPECIFICATION.md
crates/omwei-atom/examples/: mock_entities.rs  usage_demo.rs
crates/omwei-atom/src/: lib.rs  trust_hierarchy.rs
crates/sams-blackbox/: Cargo.toml  README.md
crates/sams-blackbox/src/: lib.rs
crates/sams-ghost-node/: Cargo.toml  README.md
crates/sams-ghost-node/src/: lib.rs
crates/sams-industrial-ecosystem/: Cargo.toml  README.md
crates/sams-industrial-ecosystem/src/: blackbox.rs  ghost_node.rs  lib.rs  logic_gate.rs
crates/sams-logic-gate/: Cargo.toml  README.md
crates/sams-logic-gate/src/: lib.rs
examples/: bench_trust.rs  mock_entities.rs  trust_hierarchy_demo.rs  usage_demo.rs  verify_v02.rs
src/: lib.rs  trust_hierarchy.rs
