[package]
name = "omwei-atom"
version = "0.1.2"
edition = "2021"
authors = ["32BSA Contributors"]
license = "MIT OR Apache-2.0"
description = "Core implementation of the OMWEI 32B Semantic Atom (32BSA) standard. The universal grammar for Agentic AI and Industrial IoT Integrity."
repository = "https://github.com/LelloOmwei/omwei-atom"
homepage = "https://www.equinibrium.eu"
documentation = "https://docs.rs/omwei-atom"
readme = "README.md"
keywords = ["iot", "semantic", "atom", "32bsa", "industry4"]
categories = ["data-structures", "embedded", "network-programming", "science"]
rust-version = "1.70"

[features]
default = []
std = ["serde?/std", "sha2?/std"]
serde = ["dep:serde", "dep:serde_json"]
pqc = ["dep:sha2"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true, default-features = false }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
