[package]
name = "sams-blackbox"
version = "0.2.0"
edition = "2021"
authors = ["OMWEI Project <maintainers@omwei.org>"]
license = "MIT OR Apache-2.0"
description = "SAMS Blackbox - Trust-aware logging and audit trail system for OMWEI 32BSA ecosystem with Sincerity Bit tagging."
repository = "https://github.com/LelloOmwei/omwei-atom"
homepage = "https://github.com/LelloOmwei/omwei-atom"
documentation = "https://docs.rs/sams-blackbox"
readme = "README.md"
keywords = ["SAMS", "Blackbox", "OMWEI", "32BSA", "TrustLogging"]
categories = ["development-tools", "database", "embedded"]
rust-version = "1.70"

[dependencies]
# Core OMWEI 32BSA Trust Hierarchy
omwei-atom = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Database (optional)
sqlx = { version = "0.7", optional = true, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Compression (optional)
lz4 = { version = "1.24", optional = true }

# Serialization (optional)
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, optional = true }

[features]
default = ["std"]
std = ["omwei-atom/std"]
serde = ["dep:serde", "dep:serde_json"]
pqc = ["omwei-atom/pqc"]
compression = ["dep:lz4"]
database = ["dep:sqlx"]
sqlx = ["dep:sqlx"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
