[package]
name = "sams-ghost-node"
version = "0.2.0"
edition = "2021"
authors = ["OMWEI Project <maintainers@omwei.org>"]
license = "MIT OR Apache-2.0"
description = "SAMS Ghost Node - Post-Quantum Cryptography storage and verification for Managed Space atoms in OMWEI 32BSA ecosystem."
repository = "https://github.com/LelloOmwei/omwei-atom"
homepage = "https://github.com/LelloOmwei/omwei-atom"
documentation = "https://docs.rs/sams-ghost-node"
readme = "README.md"
keywords = ["SAMS", "GhostNode", "OMWEI", "32BSA", "PQC"]
categories = ["cryptography", "database", "embedded", "security"]
rust-version = "1.70"

[dependencies]
# Core OMWEI 32BSA Trust Hierarchy
omwei-atom = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Cryptography (placeholder for PQC libraries)
sha2 = { workspace = true }

# Database (optional)
sqlx = { version = "0.7", optional = true, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Compression (optional)
lz4 = { version = "1.24", optional = true }

# Serialization (optional)
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, optional = true }

[features]
default = ["std"]
std = ["omwei-atom/std"]
serde = ["dep:serde", "dep:serde_json"]
pqc = ["omwei-atom/pqc"]
compression = ["dep:lz4"]
database = ["dep:sqlx"]
sqlx = ["dep:sqlx"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
