[package]
name = "sams-industrial-ecosystem"
version = "0.2.0"
edition = "2021"
authors = ["OMWEI Project <maintainers@omwei.org>"]
license = "MIT OR Apache-2.0"
description = "Industrial-grade 32-bit Semantic Atom (32BSA) ecosystem. High-integrity hardware trust hierarchy with 5ns latency."
repository = "https://github.com/LelloOmwei/sams-industrial-ecosystem"
homepage = "https://github.com/LelloOmwei/sams-industrial-ecosystem"
documentation = "https://docs.rs/sams-industrial-ecosystem"
readme = "README.md"
keywords = ["omwei", "32bsa", "trust-hierarchy", "pqc", "industrial"]
categories = ["embedded", "cryptography", "science"]
rust-version = "1.70"

[dependencies]
# Core OMWEI 32BSA Trust Hierarchy
omwei-atom = { workspace = true }

# SAMS Ecosystem Components
sams-logic-gate = { workspace = true }
sams-blackbox = { workspace = true }
sams-ghost-node = { workspace = true }
cyber-monitor = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

[features]
default = ["std"]
std = ["omwei-atom/std"]
serde = ["dep:serde", "dep:serde_json"]
pqc = ["omwei-atom/pqc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "verify_v02"
path = "examples/verify_v02.rs"
required-features = ["std", "tokio"]

[[example]]
name = "bench_trust"
path = "examples/bench_trust.rs"
required-features = ["std"]
